fix: prevent cart content from hiding behind navbar

--- a/style.css
+++ b/style.css
@@ -1092,7 +1092,19 @@ footer .copyright {
 /* ============================================
    CART PAGE
    ============================================ */
-
+.cartmain{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100px;
+}
+#page-header{
+    margin-left: 100px;
+}
+.seperator{
+    height: 1px;
+    background-color: #bfbfbf;
+}
 #cart {
     overflow-x: auto;
 }
